Fix overlapping div issue

--- a/app/assets/stylesheets/summit.scss
+++ b/app/assets/stylesheets/summit.scss
@@ -100,7 +100,7 @@ body {
 }
 .pane {
 	width: 100%;
-	height: 100vh;
+	min-height: 100vh;
 	padding-top: 118px;
 }
 ul#steps {
